# geodata-study

./: .env.development.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .pre-commit-install.sh  COMMIT_CHECKLIST.md  EXAMPLES.md  INSTALL.md  LICENSE.md  Makefile  PRECOMMIT.md  README.md  README_MCP.md  env.example  main.py  mcp_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality-checks.yml
scripts/: deploy.sh  setup-production.sh
src/: __init__.py
src/geodata_br_mcp/: config.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_imports.py  test_server.py  test_utils.py
