[project]
name = "geodata-br-mcp"
version = "0.1.0"
description = "Servidor MCP para acesso a dados geográficos do Brasil (GeoJSON de municípios por estado)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Geodata-BR Contributors" }
]
license = { text = "CC0-1.0" }
keywords = ["mcp", "geojson", "brasil", "ibge", "geodata", "municipios"]

dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/tthiagosantos/geodata-br"
Repository = "https://github.com/tthiagosantos/geodata-br"
Documentation = "https://github.com/tthiagosantos/geodata-br#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geodata_br_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/geodata_br_mcp --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["geojson/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["geojson/", "tests/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*", "pytest.*"]
ignore_missing_imports = true
